--- a/task-app/Gemfile
+++ b/task-app/Gemfile
@@ -16,6 +16,8 @@ gem 'pg', '~> 1.3', '>= 1.3.5'
 
 gem 'devise', '~> 4.8', '>= 4.8.1'
 
+gem 'jquery-rails'
+
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", "~> 5.0"
 
